--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,35 @@
-name: run hit_api.py
+# name: run hit_api.py
 
-on:
-  schedule:
-    - cron: '0 7 * * *' # At 07:00 every day
-  workflow_dispatch:
+# on:
+#   schedule:
+#     - cron: '0 7 * * *' # At 07:00 every day
+#   workflow_dispatch:
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
 
-      - name: checkout repo content
-        uses: actions/checkout@v2
+#       - name: checkout repo content
+#         uses: actions/checkout@v2
 
-      - name: setup python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
+#       - name: setup python
+#         uses: actions/setup-python@v4
+#         with:
+#           python-version: '3.9'
           
-      - name: install python packages
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+#       - name: install python packages
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install -r requirements.txt
 
-      - name: configure git for GitHub Actions
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+#       - name: configure git for GitHub Actions
+#         run: |
+#           git config --global user.name 'github-actions[bot]'
+#           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+#           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
 
-      - name: execute py script
-        env:
-          NBA_API_KEY: ${{ secrets.NBA_API_KEY }}
-        run: python scripts/hit_api.py
+#       - name: execute py script
+#         env:
+#           NBA_API_KEY: ${{ secrets.NBA_API_KEY }}
+#         run: python scripts/hit_api.py
